SalcodeMst with Oracle 10g XE

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -215,6 +215,8 @@ null=
 errors.existing.employee=This employee ({0}) already exists.  Please try a different employee name.
 
 menu.master=Master
+menu.transactions=Transactions
+menu.attendance=Attendance Entry
 menu.employee=Employee
 menu.salaryElement=Salary Element
 employeeDetail.heading=Current Employee Details
