--- a/pom.xml
+++ b/pom.xml
@@ -624,21 +624,18 @@
         </profile>
         <profile>
             <id>oracle</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
                 <dbunit.dataTypeFactoryName>org.dbunit.ext.oracle.OracleDataTypeFactory</dbunit.dataTypeFactoryName>
                 <dbunit.schema>SYSTEM</dbunit.schema> <!-- Make sure to capitalize the schema name -->
-                <hibernate.dialect>org.hibernate.dialect.Oracle9Dialect</hibernate.dialect>
+                <hibernate.dialect>org.hibernate.dialect.Oracle10gDialect</hibernate.dialect>
                 <jdbc.groupId>com.oracle</jdbc.groupId>
                 <jdbc.artifactId>ojdbc14</jdbc.artifactId>
                 <jdbc.version>10.2.0.2.0</jdbc.version>
                 <jdbc.driverClassName>oracle.jdbc.OracleDriver</jdbc.driverClassName>
                 <jdbc.url>jdbc:oracle:thin:@localhost:1521:XE</jdbc.url>
-                <jdbc.username>system</jdbc.username>
-                <jdbc.password>system</jdbc.password>
-                <jdbc.validationQuery>SELECT 1 + 1 from DUAL</jdbc.validationQuery>
+                <jdbc.username>SYSTEM</jdbc.username>
+                <jdbc.password>root</jdbc.password>
+                <jdbc.validationQuery>SELECT 1 from DUAL</jdbc.validationQuery>
             </properties>
         </profile>
         <profile>
@@ -728,7 +725,7 @@
         -->
 
         <!-- Database settings -->
-        <!-- <dbunit.dataTypeFactoryName>org.dbunit.ext.mysql.MySqlDataTypeFactory</dbunit.dataTypeFactoryName>
+        <dbunit.dataTypeFactoryName>org.dbunit.ext.mysql.MySqlDataTypeFactory</dbunit.dataTypeFactoryName>
         <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
         <hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>
         <jdbc.groupId>mysql</jdbc.groupId>
@@ -738,20 +735,20 @@
         <jdbc.url>jdbc:mysql://localhost/${db.name}?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true</jdbc.url>
         <jdbc.username>root</jdbc.username>
         <jdbc.password>root</jdbc.password>
-        <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery> -->
+        <jdbc.validationQuery>SELECT 1 + 1</jdbc.validationQuery>
 
         <!-- Database settings -->
-        <dbunit.dataTypeFactoryName>org.dbunit.ext.oracle.OracleDataTypeFactory</dbunit.dataTypeFactoryName>
-        <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
-        <hibernate.dialect>org.hibernate.dialect.Oracle9Dialect</hibernate.dialect>
+        <!-- <dbunit.dataTypeFactoryName>org.dbunit.ext.oracle.OracleDataTypeFactory</dbunit.dataTypeFactoryName>
+        <dbunit.schema>system</dbunit.schema>
+        <hibernate.dialect>org.hibernate.dialect.Oracle10gDialect</hibernate.dialect>
         <jdbc.groupId>com.oracle</jdbc.groupId>
         <jdbc.artifactId>ojdbc14</jdbc.artifactId>
         <jdbc.version>10.2.0.2.0</jdbc.version>
         <jdbc.driverClassName>oracle.jdbc.OracleDriver</jdbc.driverClassName>
         <jdbc.url>jdbc:oracle:thin:@localhost:1521:XE</jdbc.url>
         <jdbc.username>system</jdbc.username>
-        <jdbc.password>system</jdbc.password>
-        <jdbc.validationQuery>SELECT 1 + 1 from DUAL</jdbc.validationQuery>
+        <jdbc.password>root</jdbc.password>
+        <jdbc.validationQuery>SELECT 1 from DUAL</jdbc.validationQuery> -->
 
     </properties>
 </project>
